backup_individuals/sjeng/use_undefined_identifier/c3/SwitchColor
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/SwitchColor/src/crazy.c:662:8: error: use of undeclared identifier 'dword_4199B0'
return dword_4199B0[piece]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/SwitchColor/src/obj/crazy.o] Error 1
